2009-05-30  Per Bothner  <per@bothner.com>

	* LitTable.java (writeObject, emit): Add support for Pattern literals.

2009-05-17  Per Bothner  <per@bothner.com>

	Add support for JSR-223 scrpting (javax.script).
	* AbstractScriptEngineFactory.java: New class.
	* KawaScriptBindings.java: New class.
	* KawaScriptEngine.java: New class
	* Makefile.am: Update accordingly.
	* ModuleExp.java (evalModule1, evalModule2): Create/find instance
	in evalModule2, rather than evalModule1.

2009-05-15  Per Bothner  <per@bothner.com>

	Fix bug reported by Alex Mitchell <alexm@nus.edu.sg>.
	* Language.java (PARSE_CURRENT_NAMES): New flag, to split the old
	functionality of PARSE_IMMEDIATE into two parts.
	(PARSE_FOR_EVAL): Old combined functionality.
	(parse(Inport,SourceMEssages,int,ModuleInfo)): New method.
	(parse): Check PARSE_CURRENT_NAMES.
	(eval): Use PARSE_FOR_EVAL rather than PARSE_IMMEDIATE.
	* Compilation.java (process): If immediate create ClassLoader here.
	(usedClass): Above change allows simplification here.
	* ModuleExp.java (evalToClass): Don't create ArrayClassLoader here.

2009-04-21  Per Bothner  <per@bothner.com>

	* Compilation.java (makeRunnable): New method.
	(addMainClass): Use makeRunnable.
	(generateBytecode): If staticInitRun, we don't implement Runnable,
	so find run method in ModuleBody rather than Runnable.
	* ModuleInfo.java (getCompilation): New method.

	* Compilation.java (generateBytecode): The $instance field should have
	type moduleClass, not mainClass.  (Not that it matters, since there
	are other problems combining module-extends with static modules.)

	* BindingInitializer.java (emit): Revert 2009-04-18 - no longer needed.
	* Compilation.java (compileConstant): If compiling a ClassType with
	Class as the expected type, do loadClassRef to get the Class.

2009-04-18  Per Bothner  <per@bothner.com>

	* BindingInitializer.java (emit): If the value is a ModuleExp,
	use loadClassRef to load the Class instead.